<resources>
    <string name="app_name">Hyprviscomatic</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username/Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_register">Register</string>
    <string name="action_shops">Shops</string>
    <string name="welcome">Welcome</string>
    <string name="reg_shopname">Shop Name or \n Name Of Owner</string>
    <string name="reg_shopaddress">Shop address</string>
    <string name="reg_shop_contact_num">Contact Number</string>
    <string name="reg_shop_shipping_address">Shipping Address</string>
    <string name="reg_shop_picture">Pictures of the\nStore Branch</string>
    <string name="reg_shop_picture_permit">Pictures of\nMayor\'s Permit or\nDTI or \nBrgy Permit</string>
    <string name="reg_shop_branch">Branch</string>
    <string name="action_add_branch">Add Branch</string>
    <string name="tv_reg_password">Password</string>
    <string name="tv_reg_email_address">Email</string>
    <string name="action_submit">Submit</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nav_logout">Log out</string>
    <string name="label_branch_name">Branch Name</string>
    <string name="label_branch_address">Address</string>
    <string name="label_branch_phone">Contact Number</string>
    <string name="cancel">Cancel</string>
    <string name="is_required">Required</string>
    <string name="action_ok">OK</string>
    <string name="save">SAVE</string>
    <string name="tv_branch_list_permit_header">Pictures of Mayor\\\'s Permit or DTI or Barangay Permit</string>
    <string name="save_modification">Save Changes</string>
    <string name="nav_products">Shop now!</string>
    <string name="nav_shopping_cart">Shopping Cart</string>
    <string name="nav_branch">Branch</string>
    <string name="add_to_cart">Add to\ncart</string>
    <string name="label_brand_qty">0</string>
</resources>
