<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <!--<item-->
            <!--android:id="@+id/nav_shop"-->
            <!--android:icon="@drawable/ic_shopping_basket_black_48dp"-->
            <!--android:title="@string/nav_products" />-->
        <item
            android:id="@+id/nav_shopping_cart"
            android:icon="@drawable/ic_shopping_cart_black_48dp"
            android:title="@string/nav_shopping_cart" />
        <item
            android:id="@+id/nav_branch"
            android:icon="@drawable/ic_store_black_48dp"
            android:title="@string/nav_branch" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications_black_48dp"
            android:title="Notifications" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history_black_48dp"
            android:title="History" />
    </group>

    <group android:id="@+id/menu_bottom"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_power_settings_new_black_48dp"
            android:title="@string/nav_logout" />
    </group>

</menu>
