<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".LandingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:background="@color/black"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/google_icon"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".50"
            android:scaleType="fitCenter"
            android:layout_marginTop="@dimen/g_top_margin"
            android:src="@drawable/app_logo" />

        <LinearLayout
            android:id="@+id/ll_btn_landing_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="30dp"
            android:paddingRight="80dp"
            android:paddingLeft="80dp"
            android:gravity="center">
            <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/background_material_light"
            android:background="@drawable/rounded_corners_primary"
            android:textAllCaps="true"
            android:text="@string/action_sign_in_short"
            android:id="@+id/btn_landing_sign_in"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="12dp"
            android:id="@+id/ll_btn_landing_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="30dp"
            android:paddingRight="80dp"
            android:paddingLeft="80dp"
            android:gravity="center">
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/background_material_light"
                android:background="@drawable/rounded_corners_accent"
                android:textAllCaps="true"
                android:text="@string/action_register"
                android:id="@+id/btn_landing_register"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="12dp"
            android:id="@+id/ll_btn_landing_shop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="30dp"
            android:paddingRight="80dp"
            android:paddingLeft="80dp"
            android:gravity="center">
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/background_material_light"
                android:background="@drawable/rounded_corners_accent"
                android:textAllCaps="true"
                android:text="@string/action_shops"
                android:id="@+id/btn_landing_shop"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>


    </LinearLayout>


</LinearLayout>
