<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_margin="20dp"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_dialog_add_branch_name"
        android:hint="@string/label_branch_name"
        android:lines="1"
        android:layout_gravity="center_horizontal"
         />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_dialog_add_branch_address"
        android:hint="@string/label_branch_address"
        android:lines="1"
        android:layout_gravity="center_horizontal"
         />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_dialog_add_branch_phone"
        android:hint="@string/label_branch_phone"
        android:inputType="phone"
        android:lines="1"
        android:layout_gravity="center_horizontal"
         />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll_shop_picture"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_shop_picture"
            android:layout_gravity="center_vertical"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical|end">
        <ImageButton
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_add_a_photo_grey600_48dp"
            android:id="@+id/btn_shop_picture_camera"
            android:textColor="@color/colorAccent"
            android:background="@drawable/btn_ripple_dark"/>
            </LinearLayout>

    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical|start"
            android:id="@+id/ll_shop_picture_camera">
            <ImageView
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="centerCrop"
                android:id="@+id/iv_cam_store_3"
                android:background="@android:color/transparent"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"/>
            <ImageView
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="centerCrop"
                android:id="@+id/iv_cam_store_2"
                android:background="@android:color/transparent"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"/>
            <ImageView
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="centerCrop"
                android:id="@+id/iv_cam_store_1"
                android:background="@android:color/transparent"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"/>
            <ImageView
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="centerCrop"
                android:id="@+id/iv_cam_store_0"
                android:background="@android:color/transparent"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"/>
            <LinearLayout
                android:id="@+id/ll_photo_store_imageExcessDisplay"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="10dp"
                android:layout_margin="5dp"
                android:gravity="center_vertical|center_horizontal"
                android:background="@drawable/border_rectangle"
                android:visibility="gone">
                <TextView
                    android:id="@+id/tv_store_imageExcessCount"
                    android:background="@color/black_highlight"
                    android:textColor="@color/light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+10"/>
            </LinearLayout>
            <!--<ImageButton-->
                <!--android:layout_marginLeft="2dp"-->
                <!--android:layout_marginRight="2dp"-->
                <!--android:layout_width="50dp"-->
                <!--android:layout_height="50dp"-->
                <!--android:padding="10dp"-->
                <!--android:layout_marginTop="5dp"-->
                <!--android:layout_marginBottom="5dp"-->
                <!--android:scaleType="fitCenter"-->
                <!--android:src="@drawable/ic_add_a_photo_grey600_48dp"-->
                <!--android:id="@+id/btn_shop_picture_camera"-->
                <!--android:textColor="@color/colorAccent"-->
                <!--android:background="@drawable/btn_ripple_dark"/>-->
        </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll_shop_picture_permits"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_shop_picture_permit"
            android:layout_gravity="center_vertical"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical|end">
        <ImageButton
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_add_a_photo_grey600_48dp"
            android:id="@+id/btn_shop_picture_permit_camera"
            android:textColor="@color/colorAccent"
            android:background="@drawable/btn_ripple_dark"/>
            </LinearLayout>
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical|start"
            android:id="@+id/ll_shop_picture_permit_camera">

            <ImageView
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="centerCrop"
                android:id="@+id/iv_cam_permit_3"
                android:background="@android:color/transparent"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"/>
            <ImageView
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="centerCrop"
                android:id="@+id/iv_cam_permit_2"
                android:background="@android:color/transparent"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"/>
            <ImageView
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="centerCrop"
                android:id="@+id/iv_cam_permit_1"
                android:background="@android:color/transparent"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"/>
            <ImageView
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="centerCrop"
                android:id="@+id/iv_cam_permit_0"
                android:background="@android:color/transparent"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"/>
            <LinearLayout
                android:id="@+id/ll_photo_permit_imageExcessDisplay"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="10dp"
                android:layout_margin="5dp"
                android:gravity="center_vertical|center_horizontal"
                android:background="@drawable/border_rectangle"
                android:visibility="gone">
                <TextView
                    android:id="@+id/tv_permit_imageExcessCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/black_highlight"
                    android:textColor="@color/light"
                    android:text="+10"/>
            </LinearLayout>
        </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="30dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/btn_branch_add"
            style="@style/Widget.AppCompat.Button.Colored"
            android:padding="20dp" />
    </LinearLayout>
</LinearLayout>